--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -16,7 +16,7 @@ permissions:
 jobs:
   update-proxies:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 60
     
     steps:
     - name: 📥 Checkout repository
@@ -28,18 +28,19 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
+        cache: 'pip'
     
     - name: 📦 Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install beautifulsoup4 lxml
+        pip install beautifulsoup4 lxml  # برای پردازش HTML
     
     - name: 🚀 Run update script
       run: |
         echo "Starting proxy update process..."
         python scripts/update.py
-        echo "Update completed!"
+        echo "Update script completed!"
     
     - name: 💾 Commit and push changes
       run: |
@@ -47,7 +48,7 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         
         # Pull any remote changes first
-        git pull origin main --rebase || echo "No remote changes"
+        git pull origin main --rebase --autostash || echo "Could not pull changes"
         
         # Add config file
         git add output/config.yaml
@@ -59,10 +60,30 @@ jobs:
           # Create commit message
           COMMIT_DATE=$(date -u '+%Y-%m-%d %H:%M UTC')
           git commit -m "🤖 Update proxy list - $COMMIT_DATE" \
-                     -m "Auto-updated proxy list" \
-                     -m "Maintains minimum 50 proxies"
+                     -m "Auto-updated Iranian proxy list" \
+                     -m "• Added new proxies from Iranian sources" \
+                     -m "• Removed old proxies based on conditions" \
+                     -m "• Maintains minimum 50 active proxies"
           
           # Push changes
           git push
           echo "✅ Changes pushed successfully"
         fi
+    
+    - name: 📝 Create summary
+      if: always()
+      run: |
+        echo "## Update Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Status:** ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Time:** $(date -u '+%Y-%m-%d %H:%M UTC')" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Proxy Management:**" >> $GITHUB_STEP_SUMMARY
+        echo "- Automatic update every 6 hours" >> $GITHUB_STEP_SUMMARY
+        echo "- Collects Iranian proxies from multiple sources" >> $GITHUB_STEP_SUMMARY
+        echo "- Supports HTTP, SOCKS5, VMESS, VLESS, Shadowsocks" >> $GITHUB_STEP_SUMMARY
+        echo "- Maintains minimum 50 active proxies" >> $GITHUB_STEP_SUMMARY
+        echo "- Removes old proxies only when conditions met" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "Check `output/config.yaml` for the latest proxy list." >> $GITHUB_STEP_SUMMARY
