--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: 🐍 Setup Python
       uses: actions/setup-python@v5
@@ -34,7 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install beautifulsoup4 lxml  # برای پردازش HTML
+        pip install beautifulsoup4 lxml
     
     - name: 🚀 Run update script
       run: |
@@ -47,43 +48,27 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         
-        # Pull any remote changes first
-        git pull origin main --rebase --autostash || echo "Could not pull changes"
+        # حذف فایل قدیمی config اگر وجود دارد
+        rm -f output/config.yaml
         
-        # Add config file
+        # از آخرین تغییرات آپدیت شو
+        git fetch origin
+        git reset --hard origin/main
+        
+        # دوباره اسکریپت را اجرا کن (با اطلاعات جدید)
+        python scripts/update.py
+        
+        # فقط فایل config را اضافه کن
         git add output/config.yaml
         
-        # Check if there are changes
-        if git diff --cached --quiet; then
-          echo "⚠️ No changes to commit"
-        else
-          # Create commit message
+        # اگر تغییری وجود دارد commit کن
+        if ! git diff --cached --quiet; then
           COMMIT_DATE=$(date -u '+%Y-%m-%d %H:%M UTC')
-          git commit -m "🤖 Update proxy list - $COMMIT_DATE" \
-                     -m "Auto-updated Iranian proxy list" \
-                     -m "• Added new proxies from Iranian sources" \
-                     -m "• Removed old proxies based on conditions" \
-                     -m "• Maintains minimum 50 active proxies"
+          git commit -m "🤖 Update proxy list - $COMMIT_DATE"
           
-          # Push changes
-          git push
+          # Push با force (مطمئن شو کار می‌کند)
+          git push origin HEAD:main
           echo "✅ Changes pushed successfully"
+        else
+          echo "⚠️ No changes to commit"
         fi
-    
-    - name: 📝 Create summary
-      if: always()
-      run: |
-        echo "## Update Summary" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Status:** ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Time:** $(date -u '+%Y-%m-%d %H:%M UTC')" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Proxy Management:**" >> $GITHUB_STEP_SUMMARY
-        echo "- Automatic update every 6 hours" >> $GITHUB_STEP_SUMMARY
-        echo "- Collects Iranian proxies from multiple sources" >> $GITHUB_STEP_SUMMARY
-        echo "- Supports HTTP, SOCKS5, VMESS, VLESS, Shadowsocks" >> $GITHUB_STEP_SUMMARY
-        echo "- Maintains minimum 50 active proxies" >> $GITHUB_STEP_SUMMARY
-        echo "- Removes old proxies only when conditions met" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "Check `output/config.yaml` for the latest proxy list." >> $GITHUB_STEP_SUMMARY
