--- a/output/config.yaml
+++ b/output/config.yaml
@@ -12,12 +12,13 @@ proxies:
   uuid: d12bc882-43c7-415e-87c5-2a7fdc8371c0
   cipher: auto
   network: ws
-  tls: false
-  alterId: 0
+  tls: true
+  alterId: 4
   ws-opts:
     path: /websocket/
     headers:
-      Host: ''
+      Host: 37.32.23.122
+  sni: 37.32.23.122
 - name: 185.143.233.114:80 (46ms)
   type: vmess
   server: 185.143.233.114
@@ -32,7 +33,7 @@ proxies:
   cipher: auto
   network: ws
   tls: false
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /
     headers:
@@ -51,11 +52,11 @@ proxies:
   cipher: auto
   network: ws
   tls: false
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /ws
     headers:
-      Host: ''
+      Host: 185.24.255.24
 - name: 2.189.59.7:443
   type: vmess
   server: 2.189.59.7
@@ -70,11 +71,12 @@ proxies:
   cipher: auto
   network: ws
   tls: true
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /linkws
     headers:
       Host: obdii.cfd
+  sni: obdii.cfd
 - name: 193.39.9.61:13909
   type: vmess
   server: 193.39.9.61
@@ -89,11 +91,11 @@ proxies:
   cipher: auto
   network: ws
   tls: false
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /
     headers:
-      Host: ''
+      Host: 193.39.9.61
 - name: 2.189.59.5:443
   type: vmess
   server: 2.189.59.5
@@ -108,11 +110,12 @@ proxies:
   cipher: auto
   network: ws
   tls: true
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /linkws
     headers:
       Host: obdii.cfd
+  sni: obdii.cfd
 - name: 2.189.59.6:443
   type: vmess
   server: 2.189.59.6
@@ -127,11 +130,12 @@ proxies:
   cipher: auto
   network: ws
   tls: true
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /
     headers:
       Host: obdii.cfd
+  sni: obdii.cfd
 - name: 2.189.59.3:443
   type: vmess
   server: 2.189.59.3
@@ -146,11 +150,12 @@ proxies:
   cipher: auto
   network: ws
   tls: true
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /
     headers:
       Host: obdii.cfd
+  sni: obdii.cfd
 - name: 2.189.59.4:443
   type: vmess
   server: 2.189.59.4
@@ -165,11 +170,12 @@ proxies:
   cipher: auto
   network: ws
   tls: true
-  alterId: 0
+  alterId: 4
   ws-opts:
     path: /linkws
     headers:
       Host: obdii.cfd
+  sni: obdii.cfd
 - name: 185.172.3.70:8081 (216ms)
   type: http
   server: 185.172.3.70
