update-proxies.yml

--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -35,7 +35,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install beautifulsoup4 lxml
+        pip install PySocks requests beautifulsoup4 pyyaml lxml
+        
+
+    - name: Fix Clash config
+      run: |
+        python scripts/fix_clash.py
+        
+    - name: Create Clash subscription
+      run: |
+        python scripts/create_subscription.py
     
     - name:  هوشمند مدیریت تغییرات
       run: |
